<resources>
    <string name="app_name">BreakingBadApp</string>
    <string name="random_characters_text">Случайный персонаж</string>
    <string name="random_characters_name">Имя персонажа</string>
    <string name="random_character_image_description">Картинка случайного персонажа</string>
    <string name="random_character_birthday">09–07–1958</string>
    <string name="character_birthday_label">День рождения: </string>
    <string name="character_status_label">Статус: </string>
    <string name="character_nickname_label">Прозвище: </string>
    <string name="character_actor_label">Актёр: </string>
    <string name="random_character_status">Живой</string>
    <string name="random_character_nickname">Никнейм</string>
    <string name="random_character_actor">Имя Актера</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="random_character">Случайный персонаж</string>
    <string name="search_quote">Поиск цитат</string>
    <string name="character_name_enter_label">Введите имя персонажа:</string>
    <string name="name">Имя</string>
    <string name="character_name_label">Имя: </string>
    <string name="quote_label">Цитата: </string>
    <string name="author_label">Автор: </string>
    <string name="quote_not_found">Цитат не найдено</string>
    <string name="random_character_history">История случайных персонажей</string>
    <string name="prev_character_button">Предыдущий</string>
    <string name="next_character_button">Следующий</string>
    <string name="characters">Персонажи</string>
    <string name="random_character_placeholder">Начните поиск, чтобы получить информацию о случайном персонаже.</string>
    <string name="clear_history">Очистить историю</string>
    <string name="empty_history_text">История запросов пуста. Для отображения истории необходимо сделать запрос во вкладке \"Случайный персонаж\"</string>
    <string name="confirm">Подтвердить</string>
    <string name="cancel">Отмена</string>
    <string name="default_confirmation_message">Вы уверены?</string>
    <string name="clear_history_confirmation">Вы точно хотите очистить историю запросов?</string>
    <string name="characters_toolbar_title">Персонажи сериала</string>
    <string name="random_character_toolbar_title">Случайный персонаж</string>
    <string name="history_toolbar_title">История</string>
    <string name="search_quotes_toolbar_title">Поиск цитат</string>
    <string name="search_quotes_search_button_description">Кнопка для поиска цитат по введенному персонажу</string>
    <string name="delete_item">Удалить</string>
    <string name="delete_item_success">Успешно удален</string>
</resources>