<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/random_character_button"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_characters_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90" />

    <TextView
        android:id="@+id/random_character_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_character_placeholder"
        android:visibility="visible"
        android:textSize="@dimen/placeholder_text_size"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/random_character_progressbar"
        android:layout_width="@dimen/progressbar_size"
        android:layout_height="@dimen/progressbar_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/random_character_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/random_character_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_container"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible">

        <TextView
            android:id="@+id/random_character_status_label"
            style="@style/character_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_status_label"
            app:layout_constraintBottom_toTopOf="@+id/random_character_nickname_label"
            app:layout_constraintEnd_toEndOf="@+id/random_character_birthday_label"
            app:layout_constraintStart_toStartOf="@+id/random_character_birthday_label"
            app:layout_constraintTop_toBottomOf="@+id/random_character_birthday_label" />

        <TextView
            android:id="@+id/random_character_status"
            style="@style/character_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/random_character_status_label"
            app:layout_constraintEnd_toEndOf="@+id/random_character_birthday"
            app:layout_constraintHorizontal_bias="0.774"
            app:layout_constraintStart_toStartOf="@+id/random_character_birthday"
            app:layout_constraintTop_toTopOf="@+id/random_character_status_label"
            tools:text="@string/random_character_status" />

        <TextView
            android:id="@+id/random_character_nickname_label"
            style="@style/character_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_nickname_label"
            app:layout_constraintBottom_toTopOf="@+id/random_character_actor_label"
            app:layout_constraintEnd_toEndOf="@+id/random_character_status_label"
            app:layout_constraintStart_toStartOf="@+id/random_character_status_label"
            app:layout_constraintTop_toBottomOf="@+id/random_character_status_label" />

        <TextView
            android:id="@+id/random_character_nickname"
            style="@style/character_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/random_character_nickname_label"
            app:layout_constraintEnd_toEndOf="@+id/random_character_status"
            app:layout_constraintStart_toStartOf="@+id/random_character_status"
            app:layout_constraintTop_toTopOf="@+id/random_character_nickname_label"
            tools:text="@string/random_character_nickname" />

        <TextView
            android:id="@+id/random_character_actor_label"
            style="@style/character_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_actor_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/random_character_nickname_label"
            app:layout_constraintStart_toStartOf="@+id/random_character_nickname_label"
            app:layout_constraintTop_toBottomOf="@+id/random_character_nickname_label" />

        <TextView
            android:id="@+id/random_character_actor"
            style="@style/character_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/random_character_actor_label"
            app:layout_constraintEnd_toEndOf="@+id/random_character_nickname"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="@+id/random_character_nickname"
            app:layout_constraintTop_toTopOf="@+id/random_character_actor_label"
            tools:text="@string/random_character_actor" />

        <ImageView
            android:id="@+id/random_character_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/random_character_image_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45"
            tools:srcCompat="@tools:sample/avatars[0]" />

        <TextView
            android:id="@+id/random_character_birthday_label"
            style="@style/character_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_birthday_label"
            app:layout_constraintBottom_toTopOf="@+id/random_character_status_label"
            app:layout_constraintEnd_toStartOf="@+id/random_character_birthday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/random_character_name" />

        <TextView
            android:id="@+id/random_character_birthday"
            style="@style/character_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/random_character_birthday_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/random_character_birthday_label"
            app:layout_constraintTop_toTopOf="@+id/random_character_birthday_label"
            tools:text="@string/random_character_birthday" />

        <TextView
            android:id="@+id/random_character_name"
            style="@style/character_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/random_character_image"
            tools:layout_editor_absoluteX="-14dp"
            tools:text="@string/random_characters_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>