<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/characters_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/scroll_character_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar_placeholder" />

    <TextView
        android:id="@+id/scroll_character_name_label"
        style="@style/detail_character_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_name_label"
        app:layout_constraintStart_toStartOf="@+id/scroll_character_picture"
        app:layout_constraintTop_toBottomOf="@+id/scroll_character_picture" />

    <TextView
        android:id="@+id/scroll_character_status_label"
        style="@style/detail_character_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_status_label"
        app:layout_constraintStart_toStartOf="@+id/scroll_character_name_label"
        app:layout_constraintTop_toBottomOf="@+id/scroll_character_name_label" />

    <TextView
        android:id="@+id/scroll_character_birthday_label"
        style="@style/detail_character_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_birthday_label"
        app:layout_constraintStart_toStartOf="@+id/scroll_character_status_label"
        app:layout_constraintTop_toBottomOf="@+id/scroll_character_status_label" />

    <TextView
        android:id="@+id/scroll_character_nickname_label"
        style="@style/detail_character_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_nickname_label"
        app:layout_constraintStart_toStartOf="@+id/scroll_character_birthday_label"
        app:layout_constraintTop_toBottomOf="@+id/scroll_character_birthday_label" />

    <TextView
        android:id="@+id/scroll_character_actor_label"
        style="@style/detail_character_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_actor_label"
        app:layout_constraintStart_toStartOf="@+id/scroll_character_nickname_label"
        app:layout_constraintTop_toBottomOf="@+id/scroll_character_nickname_label" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/character_center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/scroll_character_name"
        style="@style/detail_character_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/scroll_character_name_label"
        app:layout_constraintEnd_toEndOf="@+id/scroll_character_picture"
        app:layout_constraintStart_toStartOf="@+id/character_center_guideline"
        tools:text="Walter White Jr." />

    <TextView
        android:id="@+id/scroll_character_status"
        style="@style/detail_character_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/scroll_character_status_label"
        app:layout_constraintEnd_toEndOf="@+id/scroll_character_picture"
        app:layout_constraintStart_toStartOf="@+id/character_center_guideline"
        tools:text="Alive" />

    <TextView
        android:id="@+id/scroll_character_birthday"
        style="@style/detail_character_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/scroll_character_birthday_label"
        app:layout_constraintEnd_toEndOf="@+id/scroll_character_picture"
        app:layout_constraintStart_toStartOf="@+id/character_center_guideline"
        tools:text="07-08-1993" />

    <TextView
        android:id="@+id/scroll_character_nickname"
        style="@style/detail_character_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/scroll_character_nickname_label"
        app:layout_constraintEnd_toEndOf="@+id/scroll_character_picture"
        app:layout_constraintStart_toStartOf="@+id/character_center_guideline"
        tools:text="Flynn" />

    <TextView
        android:id="@+id/scroll_character_actor"
        style="@style/detail_character_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/scroll_character_actor_label"
        app:layout_constraintEnd_toEndOf="@+id/scroll_character_picture"
        app:layout_constraintStart_toStartOf="@+id/character_center_guideline"
        tools:text="RJ Mitte" />

</androidx.constraintlayout.widget.ConstraintLayout>